--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8">
-    <title>Berglind Brá</title>
+    <title>✽ 𝓑𝓮𝓻𝓰𝓵𝓲𝓷𝓭 𝓑𝓻𝓪 ✽</title>
 
 	<link rel='icon' type='image/png' href='/igms/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
@@ -19,6 +19,12 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
+
+
+	<meta property="og:title" content="✽ 𝓑𝓮𝓻𝓰𝓵𝓲𝓷𝓭 𝓑𝓻𝓪 ✽">
+    <meta property="og:description" content="">
+
+    <meta property="twitter:image" content="igms/litabok/skulpt6-small.png"/>
 </head>
 
 <body>
