--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <meta property="og:description" content="">
 
     <meta property="twitter:image" content="igms/litabok/skulpt6-small.png"/>
+    <meta property="og:image" content="igms/litabok/skulpt6-small.png"/>
 </head>
 
 <body>
