--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
 	<meta property="og:title" content="𝓑𝓮𝓻𝓰𝓵𝓲𝓷𝓭 𝓑𝓻𝓪">
     <meta property="og:description" content="">
 
-    <meta property="twitter:image" content="igms/litabok/skulpt6-small.png"/>
-    <meta property="og:image" content="igms/litabok/skulpt6-small.png"/>
+    <meta property="twitter:image" content="igms/beauimg/aukaaukaauka.jpg"/>
+    <meta property="og:image" content="igms/beauimg/aukaaukaauka.jpg"/>
 </head>
 
 <body>
