--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 
 
-	<meta property="og:title" content="𝓑𝓮𝓻𝓰𝓵𝓲𝓷𝓭 𝓑𝓻𝓪">
+	<meta property="og:title" content="𝓑𝓮𝓻𝓰𝓵𝓲𝓷𝓭 𝓑𝓻𝓪 ✦ 𝗉𝗈𝗋𝗍𝖿𝗈𝗅𝗂𝗈">
     <meta property="og:description" content="">
 
     <meta property="twitter:image" content="igms/beauimg/aukaaukaauka.jpg"/>
