--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8">
-    <title>𝓑𝓮𝓻𝓰𝓵𝓲𝓷𝓭 𝓑𝓻𝓪</title>
+    <title>Berglind Brá PORTFOLIO</title>
 
 	<link rel='icon' type='image/png' href='/igms/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
